@@ -42,6 +42,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+...G...... [ZBX-5661] fixed keys "vfs.dev.read" and "vfs.dev.write" with "ops" and "sps" parameters on Linux and FreeBSD (Andris)
 ...G...... [ZBX-5614] fixed agent compiling problem on OpenBSD 5.1 (Andris)
 ........S. [ZBX-5674] fixed execution of actions with SSH commands with "Public key" autentication (Sasha)
 A......... [ZBX-5656] fixed timeperiod validation (Eduard)
